--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "axios": "^0.17.0",
     "cropperjs": "^1.1.3",
-    "vue": "^2.5.2",
+    "vue": "^2.5.3",
     "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
