--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.17.0",
     "cropperjs": "^1.1.3",
+    "mint-ui": "^2.2.13",
     "vue": "^2.5.3",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.3",
